--- a/src/styles/Location.module.css
+++ b/src/styles/Location.module.css
@@ -1,8 +1,8 @@
 .location {
-  background-color: #EA4A88;
+  background-color: #ea4a88;
   margin: 0.1rem;
   text-align: center;
-  color: #ffffff;
+  color: #fff;
   max-width: 30rem;
   font-size: 20px;
   height: 7rem;
