--- a/src/styles/ViewLocation.module.css
+++ b/src/styles/ViewLocation.module.css
@@ -5,19 +5,31 @@
 }
 
 .nigeria_map {
-  width: 5rem;
+  width: 4rem;
 }
 
 .header {
   padding: 1rem;
   display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header h1,
-.weatherBox {
+.weatherBox,
+h3 {
   color: #fff;
+}
+
+.header h1 {
+  font-size: 20px;
+}
+
+.backBtn:hover {
+  color: #ea4a88;
+  background-color: #fff;
+  padding: 0.3rem;
+  border-radius: 5px;
 }
 
 .weatherBox {
@@ -40,4 +52,19 @@
 .weatherDetails :nth-child(2),
 .weatherDetails :nth-child(4) {
   background-color: #ea4a88;
+}
+
+@media (min-width: 1024px) {
+  .header {
+    max-width: 1400px;
+    margin: auto;
+  }
+
+  .header h1 {
+    font-size: 32px;
+  }
+
+  .header img {
+    width: 7rem;
+  }
 }
