--- a/src/styles/Location.module.css
+++ b/src/styles/Location.module.css
@@ -9,6 +9,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+}
+
+.arrow {
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 0.5rem;
+  font-size: 16px;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+}
+
+.arrow:hover {
+  color: #ea4a88;
+  background-color: #fff;
 }
 
 @media (min-width: 1024px) {
